# dinner-is-servered

./: CMakeLists.txt  README.md  build-all.sh  build-coverage.sh  build-server.sh  build.sh
app_pages/: index.html  landing_page.js  styles.css
confs/: cloud_config  local_development_config  sample_conf
docker/: Dockerfile  base.Dockerfile  cloudbuild.yaml  coverage.Dockerfile  init.sh
include/: app_handler.h  config_interpreter.h  crud_file_manager.h  crud_handler.h  echo_handler.h  health_handler.h  logger.h  logging_buffer.h  not_found_handler.h  registry.h  request_dispatcher.h  request_handler.h  request_parser.h  response_handler.h  server.h  session.h  signal_handler.h  sleep_handler.h  static_handler.h  utils.h
resources/htmls/: sample_coverage.html
resources/text/: blah.txt
src/: _main.cc  app_handler.cc  config_interpreter.cc  config_parser.cc  crud_file_manager.cc  crud_handler.cc  echo_handler.cc  health_handler.cc  logger.cc  logging_buffer.cc  main.cc  not_found_handler.cc  registry.cc  request_dispatcher.cc  request_handler.cc  request_parser.cc  response_handler.cc  server.cc  server.h  session.cc  session.h  signal_handler.cc  sleep_handler.cc  static_handler.cc
tests/: app_handler_test.cc  config_interpreter_test.cc  config_parser_test.cc  crud_file_manager_test.cc  crud_handler_test.cc  echo_handler_test.cc  example_config_invalid  health_handler_test.cc  integration_tests.py  logger_test.cc  logging_buffer_test.cc  not_found_handler_test.cc  registry_test.cc  request_dispatcher_test.cc  request_parser_test.cc  response_handler_test.cc  server_test.cc  session_test.cc  signal_handler_test.cc  sleep_handler_test.cc  static_handler_test.cc
tests/configs/: config_with_comment  crud_config  empty_brackets  events_reside_main_context  example_config  health_config  http_resides_main_context  invalid_char_config  location_resides_server_context  missing_closing_bracket  multiple_end_brackets  nested_blocks_config  quoted_string_config  server_resides_http_context  static_file_serving_location  unclosed_quote_config
tests/integration_test_expected_outputs/: 404_not_found  empty_brackets_expected_output  health_output  multiple_end_brackets_expected_output  successful_DELETE_output  successful_GET_output  successful_POST_output
tests/integration_tests/: integration_test_crud_delete.py  integration_test_crud_delete.sh  integration_test_crud_get.py  integration_test_crud_get.sh  integration_test_crud_list.py  integration_test_crud_list.sh  integration_test_crud_post.py  integration_test_crud_post.sh  integration_test_crud_put.py  integration_test_crud_put.sh  integration_test_empty_brackets.py  integration_test_empty_brackets.sh  integration_test_empty_config.py  integration_test_empty_config.sh  integration_test_example_config.py  integration_test_example_config.sh  integration_test_health.py  integration_test_health.sh  integration_test_missing_closing_parentheses.py  integration_test_missing_closing_parentheses.sh  integration_test_multiple_end_brackets.py  integration_test_multiple_end_brackets.sh  integration_test_multithread.py  integration_test_multithread.sh  integration_test_requested_file_fail.py  integration_test_requested_file_fail.sh  integration_test_requested_file_success.py  integration_test_requested_file_success.sh  temp
tests/resources/text/: oof.txt
